event-driven/antifraud-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antifraud-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: antifraud
  template:
    metadata:
      labels:
        app: antifraud
    spec:
      containers:
      - name: antifraud
        image: ivanmds2/poc_event_driven_antifraud:1.0.9
        resources:
          requests:
            cpu: "250m" 
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
