event-driven/payment-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: ivanmds2/poc_event_driven_payment:1.0.4
        ports:
        - containerPort: 3002
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
  
    app: payment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
