event-driven/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller-general
spec:
  rules:
  - host: a265d3d40068f47588dad4e57ea0a2e5-810116333.us-west-2.elb.amazonaws.com
    http:
      paths:
      - path: /mongodb
        pathType: Prefix
        backend:
          service:
            name: mongo-service
            port:
              number: 32767
