event-driven/ingress-default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    # - host: kafka.kube-test.acessobank-stg.com.br
    #   http:
    #     paths:
    #     - path: /
    #       pathType: Prefix
    #       backend:
    #         service:
    #           name: kafdrop-service
    #           port:
    #             number: 80
    - host: customer.kube-test.acessobank-stg.com.br
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: customer-service
              port:
                number: 80
    # - host: mongo.kube-test.acessobank-stg.com.br
    #   http:
    #     paths:
    #     - path: /
    #       pathType: Prefix
    #       backend:
    #         service:
    #           name: mongo-service
    #           port:
    #             number: 80
    - host: payment.kube-test.acessobank-stg.com.br
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: payment-service
              port:
                number: 80
    - host: grafana.kube-test.acessobank-stg.com.br
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana-service
              port:
                number: 3000
    - host: tracing.kube-test.acessobank-stg.com.br
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: zipkin-service
              port:
                number: 9411
    # - host: metric-collector.kube-test.acessobank-stg.com.br
    #   http:
    #     paths:
    #     - path: /
    #       pathType: Prefix
    #       backend:
    #         service:
    #           name: metric-collector-service
    #           port:
    #             number: 4318
